kubernetes/system/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argo
  annotations:
    ingress.cilium.io/tls-passthrough: enabled
    ingress.cilium.io/force-https: enabled
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
